--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@shopify/react-native-skia": "0.1.196",
     "expo": "^49.0.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
